# haskell-client

./: haskell-client.cabal
src/: Main.hs
src/Domain/: Feature.hs  FeatureFlags.hs
src/Handler/: LDClient.hs
src/T/: To.hs
test/T/: ToSpec.hs
