name:                haskell-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-client
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Handler.LDClient,
                       Domain.Feature,
                       Domain.FeatureFlags
  build-depends:       base >= 4.7 && < 5,
                       wreq >= 0.5.3.1,
                       hspec >= 2.5.5,
                       lens >= 4.16,
                       aeson >= 1.3.1.1,
                       bytestring >= 0.10.8.2,
                       containers >= 0.5.11.0